tdf#159306 WMF/EMF Fix PS_COSMETIC lines display

Change-Id: I3a2572a76aae61bcf8552e4623168cd72411373a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190816
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit b33cc5a7388c1739ff4a02a84751800f3e3086ce)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190845
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>