emfio/source/reader/emfreader.cxx
@@ -1256,10 +1256,10 @@ namespace emfio
                             SAL_INFO("emfio", "\t\tIndex: " << nIndex << " Style: 0x" << std::hex
                                                             << nPenStyle << std::dec
                                                             << " PenWidth: " << nPenWidth);
-                            if ((nPenStyle & PS_STYLE_MASK) > PS_INSIDEFRAME)
-                                nPenStyle = PS_COSMETIC;
-                            if ((nPenStyle & PS_GEOMETRIC) == 0)
-                                nPenWidth = 0;
+                            // PS_COSMETIC width is always fixed at one logical unit
+                            // and is not affected by any geometric transformations like scaling
+                            if (nPenStyle == PS_COSMETIC)
+                                nPenWidth = 1;
                             CreateObjectIndexed(nIndex, std::make_unique<WinMtfLineStyle>(ReadColor(), nPenStyle, nPenWidth));
                         }
                     }
@@ -1282,10 +1282,10 @@ namespace emfio
                             else
                             {
                                 SAL_INFO("emfio", "\t\tStyle: 0x" << std::hex << nPenStyle << std::dec);
-                                if ((nPenStyle & PS_STYLE_MASK) > PS_INSIDEFRAME)
-                                    nPenStyle = PS_COSMETIC;
-                                if ((nPenStyle & PS_GEOMETRIC) == 0)
-                                    nWidth = 0;
+                                // PS_COSMETIC width is always fixed at one logical unit
+                                // and is not affected by any geometric transformations like scaling
+                                if (nPenStyle == PS_COSMETIC)
+                                    nWidth = 1;
                                 SAL_INFO("emfio", "\t\tWidth: " << nWidth);
                                 CreateObjectIndexed(nIndex, std::make_unique<WinMtfLineStyle>(aColorRef, nPenStyle, nWidth));
                             }
